# shino

./: Cargo.toml  analysis_options.yaml  default-config.toml  pubspec.yaml
android/app/: build.gradle
examples/ticker-log/: Cargo.toml
examples/ticker-log/src/: main.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: bytes.dart  bytes.g.dart  command.dart  filesystem.dart  filesystem.freezed.dart  keypair.dart  keypair.g.dart  memory.dart  memory.freezed.dart  server_details.dart  server_details.freezed.dart  server_details.g.dart
lib/models/server/: generic.dart  macos.dart  nixos.dart
lib/pages/: overview.dart
lib/pages/server/: overview.dart  overview.g.dart
lib/pages/server_list/: card.dart  card.g.dart  server_edit.dart  server_list.dart  server_list.g.dart
lib/providers/: servers.dart  servers.g.dart
linux/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: args.rs  config.rs  display.rs  main.rs  remote.rs  runtime.rs  service.rs  storage.rs  systemd.rs  worker.rs
src/commands/: list.rs  mod.rs  show.rs
src/runtime/: logging.rs  mod.rs
src/systemd/: mod.rs
test/: widget_test.dart
windows/runner/: Runner.rc
wit/: logging.wit  world.wit
