[package]
name = "shino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bollard = "0.13.0"
clap = { version = "4.0.29", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
futures = "0.3.25"
itertools = "0.10.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "process"] }
toml = "0.5.9"
zbus = { version = "3.6.2", features = ["tokio"], default-features = false }
